--- a/frontend/src/components/GridEditor/GridEditor.css
+++ b/frontend/src/components/GridEditor/GridEditor.css
@@ -1,3 +1,4 @@
+/* GridEditor.css */
 :root {
     --square_var: 48px;
     --gap_var: 1px;
@@ -13,6 +14,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  max-height: 100vh;
   border: 1px ridge black;
   background-color: #404040;
 }
