--- a/frontend/src/components/PatternEditor/PatternGrid.css
+++ b/frontend/src/components/PatternEditor/PatternGrid.css
@@ -1,34 +1,87 @@
 /* PatternGrid.css */
-.pattern-grid-wrapper {
+:root {
+    --square_var: 48px;
+    --gap_var: 1px;
+  }
+
+::-webkit-scrollbar {
+    display: none;
+  }
+
+#canvasContainer {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  border: 1px ridge black;
+  background-color: #404040;
 }
 
-.tool-panel {
-  margin-bottom: 10px;
-}
-
-.tool-panel button {
-  margin-right: 5px;
-}
-
-.tool-panel button.active {
-  background-color: #ddd;
-}
-
-.pattern-grid-container {
+#gridContainer {
   display: grid;
+  justify-content: center;
+  align-items: center;
+  gap: var(--gap_var);
+  width: auto;
+  height: auto;
+  transform-origin: center center;
+  transition: transform 0.3s ease;
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, transparent 75%, transparent),
+                    linear-gradient(-45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, transparent 75%, transparent);
+  background-size: 20px 20px;
 }
 
-.pattern-grid-square {
-  cursor: crosshair;
+.gridSquare {
+  background-color: #ffffff;
+  border: 1px solid transparent;
+  position: relative;
+  aspect-ratio: 1 / 1;
+  width: var(--square_var);
+  height: var(--square_var);
+  box-sizing: border-box;
 }
 
-.pattern-grid-square.hashed {
-  background-color: #d3d3d3; /* Light gray background color */
-  background-image:
-    linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, transparent 75%, transparent),
-    linear-gradient(-45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, transparent 75%, transparent);
-  background-size: 10px 10px;
+.gridSquare.hashed {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+.marking {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: calc(var(--square_var)*0.8);
+  line-height: 1; /* Ensures the dot has no extra spacing */
+  text-align: center;
+  font-family: Arial, sans-serif; /* Ensure a consistent font for centering */
+  display: inline-block;
+}
+
+.popup {
+  position: fixed;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  z-index: 2000;
+  width: 300px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Hide popups by default */
+.popup.hidden {
+  display: none;
+}
+
+/* Adjust for smaller viewports with no sidebar */
+@media (max-width: 768px) {
+  #canvasContainer {
+    width: 100%; /* Full width without sidebar and toolbox */
+  }
 }
