--- a/frontend/src/components/PatternEditor/Toolbars/Toolbar.css
+++ b/frontend/src/components/PatternEditor/Toolbars/Toolbar.css
@@ -145,3 +145,65 @@ img {
 .tool-popup button:hover {
   background-color: #d99a60;
 }
+
+/* In your CSS file or a styled component */
+.color-options {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: flex-start;
+}
+
+.color-button {
+  width: 24px;
+  height: 24px;
+  border: 1px solid #ccc;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.color-button.white {
+  background-color: white;
+}
+
+.color-button.black {
+  background-color: black;
+}
+
+.color-button.pink {
+  background-color: #d722c5;
+}
+
+.color-button.transparent {
+  background-image:
+    linear-gradient(45deg, #ccc 25%, transparent 25%),
+    linear-gradient(-45deg, #ccc 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #ccc 75%),
+    linear-gradient(-45deg, transparent 75%, #ccc 75%);
+  background-size: 8px 8px;
+  background-position: 0 0, 0 4px, 4px -4px, -4px 0px;
+}
+
+.color-input-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+}
+
+.custom-color-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0; /* Hide the default input */
+  cursor: pointer; /* Make it clickable */
+}
+
+.color-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  pointer-events: none; /* Allow clicking through to the input */
+}
